--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kiosk Kultur</title>
+
+    <!-- Normalize the ccs  -->
+    <link rel="stylesheet" href="https://unpkg.com/browse/normalize.css@8.0.1/">
 </head>
 <body>
     
