Creates link to stylesheet

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <!-- Normalize the ccs  -->
     <link rel="stylesheet" href="https://unpkg.com/browse/normalize.css@8.0.1/">
+    <link rel="stylesheet" href="./stylesheets/style.css">
 </head>
 <body>
     
