--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kiosk Kultur</title>
 
+    <!-- Link to the font  -->
+    <link rel="stylesheet" href="https://use.typekit.net/uyi5wib.css">
+
     <!-- Normalize the ccs  -->
     <link rel="stylesheet" href="https://unpkg.com/browse/normalize.css@8.0.1/">
+
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="./stylesheets/style.css">
 </head>
 <body>
-    <h1>Hello World</h1>
     
+
 </body>
 </html>
