--- a/index.html
+++ b/index.html
@@ -24,5 +24,19 @@
         </div>
     </header>
 
+    <main>
+        <div class="content-wrap">
+            <p>
+                Li <span>Europan</span> lingues es membres del sam familie. Lor separat existentie es un myth. Por scientie, musica, <span>sport</span> etc, litot Europa usa li sam. 
+            </p>
+            <p>
+                Li lingues differe solmen in li <span>grammatica</span>, li pronunciation e li plu commun vocabules. Omnicos directe al desirabilite de un nov lingua franca: On refusa <span>continuar</span> payar custosi traductores.
+            </p>
+            <p>
+                At solmen va esser necessi far uniform grammatica, pronunciation e plu sommun paroles.
+            </p>
+        </div>
+    </main>
+
 </body>
 </html>
