Defines ids for header objects

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 <body>
     <header>
         <div class="content-wrap">
-            <p>Eine fotografische Dokumentation</p>
-            <p>Oktober 2019</p>
+            <p id="documentary">Eine fotografische Dokumentation</p>
+            <p id="time">Oktober 2019</p>
             <h1>Kiosk Kultur</h1>
-            <p>Nach unten scrollen</p>
+            <p id="scroll-down">Nach unten scrollen</p>
         </div>
     </header>
 
