--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./stylesheets/style.css">
+
+    <script src="./scripts/fitty.min.js" defer></script>
+    <script src="./scripts/app.js"></script>
 </head>
 <body>
     <header>
