BugFix: Wrong rel-tag for normalize.css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/uyi5wib.css">
 
     <!-- Normalize the ccs  -->
-    <link rel="stylesheet" href="https://unpkg.com/browse/normalize.css@8.0.1/">
+    <link rel="text/html" href="https://unpkg.com/browse/normalize.css@8.0.1/">
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./stylesheets/style.css">
