--- a/index.html
+++ b/index.html
@@ -15,14 +15,16 @@
     <link rel="stylesheet" href="./stylesheets/style.css">
 
     <script src="./scripts/fitty.min.js" defer></script>
-    <script src="./scripts/app.js"></script>
+    <script src="./scripts/app.js" defer></script>
 </head>
 <body>
     <header>
         <div class="content-wrap">
             <p id="documentary">Eine fotografische Dokumentation</p>
             <p id="time">Oktober 2019</p>
-            <h1>Kiosk Kultur</h1>
+            <div class="fit">
+                <h1 id="main-headline">Kiosk Kultur</h1>
+            </div>
             <p id="scroll-down">Nach unten scrollen</p>
         </div>
     </header>
