--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
         <div class="content-wrap">
             <p id="documentary">Eine fotografische Dokumentation</p>
-            <p id="time">Oktober 2019</p>
+            <p id="date">Oktober 2019</p>
             <div class="fit">
                 <h1 id="main-headline">Kiosk Kultur</h1>
             </div>
