Adds gradient between header and content

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     </header>
 
     <main>
+        <div id="gradient"></div>
         <div class="content-wrap">
             <p>
                 Li <span>Europan</span> lingues es membres del sam familie. Lor separat existentie es un myth. Por scientie, musica, <span>sport</span> etc, litot Europa usa li sam. 
