Creates an svg line

--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
     <header>
         <div class="content-wrap">
             <p id="documentary">Eine fotografische Dokumentation</p>
-            <p id="date">Oktober 2019</p>
+            <p id="date">
+                <svg width="100" height="1">
+                    <line x1="0" y1="0" x2="100" y2="0" style="stroke:white;stroke-width:1px;"></line>
+                </svg>
+                Oktober 2019
+            </p>
             <div class="fit">
                 <h1 id="main-headline">Kiosk Kultur</h1>
             </div>
