--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <div class="content-wrap">
             <p id="documentary">Eine fotografische Dokumentation</p>
             <p id="date">
-                <svg width="100" height="1">
-                    <line x1="0" y1="0" x2="100" y2="0" style="stroke:white;stroke-width:1px;"></line>
+                <svg>
+                    <line x1="0" y1="0" x2="100" y2="0"></line>
                 </svg>
                 Oktober 2019
             </p>
