--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./stylesheets/style.css">
 
-    <script src="./scripts/fitty.min.js" defer></script>
+    <!-- JavaScript -->
     <script src="./scripts/app.js" defer></script>
 </head>
 <body>
