Makes header-headline scalelable again

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </svg>
                 Oktober 2019
             </p>
-            <div class="fit">
+            <div class="headline-fit">
                 <h1 id="main-headline">Kiosk Kultur</h1>
             </div>
             <p id="scroll-down">Nach unten scrollen</p>
