--- a/index.html
+++ b/index.html
@@ -38,13 +38,27 @@
         <div id="gradient"></div>
         <div class="content-wrap">
             <p>
-                Li <span>Europan</span> lingues es membres del sam familie. Lor separat existentie es un myth. Por scientie, musica, <span>sport</span> etc, litot Europa usa li sam. 
+                Es war ein milder Oktoberabend in Marburg. Es regnete leicht.
+                Ich war mit Freunden an einem Späti verabredet, von dem wir unsere Späti-Tour starten wollten. Nachdem wir uns dort versammelt hatten und das erste Bier getrunken war, begann ich zu fotografieren. Glücklicherweise standen alle Späti-Besitzer dem Projekt sehr offen gegenüber, sodass ich in jedem Späti Fotos schießen konnte.
             </p>
             <p>
-                Li lingues differe solmen in li <span>grammatica</span>, li pronunciation e li plu commun vocabules. Omnicos directe al desirabilite de un nov lingua franca: On refusa <span>continuar</span> payar custosi traductores.
+                Kamera und Stativ zogen natürlich Aufmerksamkeit auf sich, was allerdings zu coolen Gesprächen führte. Eine Gruppe im Späti zeigte Interesse an dem Projekt und nach einem kurzen Gespräch durfte ich auch ein Foto von ihnen schießen. Nach einigen erfolgreichen Fotografien entbrannte eine entspannte Diskussion mit dem Späti-Besitzer über die aufkommende Späti-Kultur und wie diese sich zwischen Marburg und Mainz unterscheidet. 
             </p>
             <p>
-                At solmen va esser necessi far uniform grammatica, pronunciation e plu sommun paroles.
+                Wir verabschiedeten uns und zogen zum zweiten Späti weiter. Mittlerweile hatte es stärker angefangen zu regnen. Glücklicherweise lag der nächste Spät in einer überdachten Passage, sodass wir trocken blieben. 
+                Der Späti war kleiner und behaglicher, was das Fotografieren mit Stativ etwas erschwerte. Aber auch diese Herausforderung konnte gemeistert werden. 
+            </p>
+            <p>
+                Die ersten beiden Spätis hatten wir erfolgreich dokumentiert und wir bekamen langsam Hunger. Dazu zogen wir weiter zum Aula-Platz, dem dritten Späti. Dort trafen wir auf weitere Freunde. Wir aßen, spielten Karten und führten auch dort ein entspanntes Gespräch mit dem Späti-Besitzer. 
+            </p>
+            <p>
+                Es war spät geworden und es regnete immer stärker. Viele meiner Freunde verabschiedeten sich und gingen nach Hause. Für mich und einen weiteren Kumpel ging es jedoch weiter.
+            </p>
+            <p>
+                Beim letzten Späti für den Abend, fanden wir eine riesige Menschenversammlung vor. Kurz hatte ich Sorge, dass es deswegen nicht möglich sein würde dort Fotos zu schießen. Allerdings wurde das Projekt gut angenommen und ich konnte den Späti, Angestellte und die ausgelassene Gruppe fotografieren. Für einen kurzen Moment wurde ich Geburtstagfotograf und durfte das Geburtstagskind fotografieren. 
+            </p>
+            <p>
+                Nach einem weiteren Bier und ausgelassenen Gesprächen, wurde es immer später. Mein Kumpel und ich beschlossen hier die erfolgreiche Tour zu beenden. Wir verabschiedeten uns und gingen nach Hause.
             </p>
         </div>
     </main>
