--- a/index.html
+++ b/index.html
@@ -39,23 +39,52 @@
         <div class="content-wrap">
             <p>
                 Es war ein milder Oktoberabend in Marburg. Es regnete leicht.
-                Ich war mit Freunden an einem Späti verabredet, von dem wir unsere Späti-Tour starten wollten. Nachdem wir uns dort <span>versammelt</span> hatten und das erste Bier getrunken war, begann ich zu fotografieren. Glücklicherweise standen alle Späti-Besitzer dem Projekt sehr offen gegenüber, sodass ich in jedem Späti Fotos schießen konnte.
+                Ich war mit Freunden an einem Späti verabredet, von dem wir unsere Späti-Tour starten wollten. Nachdem wir uns dort <span>versammelt</span>
+                <img src="/assets/versammelt.jpg" alt="">
+                 hatten und das erste Bier getrunken war, begann ich zu fotografieren. Glücklicherweise standen alle Späti-Besitzer dem Projekt sehr offen gegenüber, sodass ich in jedem Späti Fotos schießen konnte.
             </p>
             <p>
-                Kamera und Stativ zogen natürlich Aufmerksamkeit auf sich, was allerdings zu coolen Gesprächen führte. Eine Gruppe im Späti zeigte Interesse an dem Projekt und nach einem kurzen Gespräch durfte ich auch ein <span>Foto</span> von ihnen schießen. Nach einigen erfolgreichen Fotografien entbrannte eine entspannte Diskussion mit dem Späti-Besitzer über die aufkommende Späti-Kultur und wie diese sich zwischen Marburg und Mainz unterscheidet. 
+                Kamera und Stativ zogen natürlich Aufmerksamkeit auf sich, was allerdings zu coolen Gesprächen führte. Eine Gruppe im Späti zeigte Interesse an dem Projekt und nach einem kurzen Gespräch durfte ich auch ein 
+                <span>Foto</span>
+                <img src="/assets/foto.jpg" alt="">
+                von ihnen schießen. Nach einigen erfolgreichen Fotografien entbrannte eine entspannte Diskussion mit dem Späti-Besitzer über die aufkommende Späti-Kultur und wie diese sich zwischen Marburg und Mainz unterscheidet. 
             </p>
             <p>
-                Wir verabschiedeten uns und zogen zum zweiten Späti weiter. Mittlerweile hatte es stärker angefangen zu regnen. Glücklicherweise lag der nächste Spät in einer überdachten <span>Passage</span>, sodass wir trocken blieben. 
-                Der Späti war kleiner und <span>behaglicher</span>, was das Fotografieren mit Stativ etwas erschwerte. Aber auch diese Herausforderung konnte gemeistert werden. 
+                Wir verabschiedeten uns und zogen zum zweiten Späti weiter. Mittlerweile hatte es stärker angefangen zu regnen. Glücklicherweise lag der nächste Spät in einer überdachten 
+                <span>Passage</span>
+                <img src="/assets/Passage.jpg" alt="">
+                , sodass wir trocken blieben. 
+                Der Späti war kleiner und 
+                <span>behaglicher</span>
+                <img src="/assets/behaglicher.jpg" alt="">
+                , was das Fotografieren mit Stativ etwas erschwerte. Aber auch diese Herausforderung konnte gemeistert werden. 
             </p>
             <p>
-                Die ersten beiden Spätis hatten wir erfolgreich dokumentiert und wir bekamen langsam Hunger. Dazu zogen wir weiter zum <span>Aula-Platz</span>, dem dritten Späti. Dort trafen wir auf weitere Freunde. Wir aßen, <span>spielten</span> Karten und führten auch dort ein entspanntes Gespräch mit dem <span>Späti-Besitzer</span>. 
+                Die ersten beiden Spätis hatten wir erfolgreich dokumentiert und wir bekamen langsam Hunger. Dazu zogen wir weiter zum 
+                <span>Aula-Platz</span>
+                <img src="/assets/aula-platz.jpg" alt="">
+                , dem dritten Späti. Dort trafen wir auf weitere Freunde. Wir aßen, 
+                <span>spielten</span>
+                <img src="/assets/spielten.jpg" alt=""> 
+                Karten und führten auch dort ein entspanntes Gespräch mit dem 
+                <span>Späti-Besitzer</span>
+                <img src="/assets/spaeti-besitzer.jpg" alt="">
+                . 
             </p>
             <p>
                 Es war spät geworden und es regnete immer stärker. Viele meiner Freunde verabschiedeten sich und gingen nach Hause. Für mich und einen weiteren Kumpel ging es jedoch weiter.
             </p>
             <p>
-                Beim letzten Späti für den Abend, fanden wir eine riesige Menschenversammlung vor. Kurz hatte ich Sorge, dass es deswegen nicht möglich sein würde dort Fotos zu schießen. Allerdings wurde das Projekt gut angenommen und ich konnte den Späti, <span>Angestellte</span> und die ausgelassene <span>Gruppe</span> fotografieren. Für einen kurzen Moment wurde ich Geburtstagfotograf und durfte das <span>Geburtstagskind</span> fotografieren. 
+                Beim letzten Späti für den Abend, fanden wir eine riesige Menschenversammlung vor. Kurz hatte ich Sorge, dass es deswegen nicht möglich sein würde dort Fotos zu schießen. Allerdings wurde das Projekt gut angenommen und ich konnte den Späti, 
+                <span>Angestellte</span> 
+                <img src="/assets/angestellte.jpg" alt="">
+                und die ausgelassene 
+                <span>Gruppe</span> 
+                <img src="/assets/gruppe.jpg" alt="">
+                fotografieren. Für einen kurzen Moment wurde ich Geburtstagfotograf und durfte das 
+                <span>Geburtstagskind</span> 
+                <img src="/assets/geburtstagkind.jpg" alt="">
+                fotografieren. 
             </p>
             <p>
                 Nach einem weiteren Bier und ausgelassenen Gesprächen, wurde es immer später. Mein Kumpel und ich beschlossen hier die erfolgreiche Tour zu beenden. Wir verabschiedeten uns und gingen nach Hause.
