--- a/index.html
+++ b/index.html
@@ -40,35 +40,35 @@
             <p>
                 Es war ein milder Oktoberabend in Marburg. Es regnete leicht.
                 Ich war mit Freunden an einem Späti verabredet, von dem wir unsere Späti-Tour starten wollten. Nachdem wir uns dort <span>versammelt</span>
-                <img src="/assets/versammelt.jpg" alt="">
+                <img src="/assets/versammelt.jpg" alt="" class="tag-image">
                  hatten und das erste Bier getrunken war, begann ich zu fotografieren. Glücklicherweise standen alle Späti-Besitzer dem Projekt sehr offen gegenüber, sodass ich in jedem Späti Fotos schießen konnte.
             </p>
             <p>
                 Kamera und Stativ zogen natürlich Aufmerksamkeit auf sich, was allerdings zu coolen Gesprächen führte. Eine Gruppe im Späti zeigte Interesse an dem Projekt und nach einem kurzen Gespräch durfte ich auch ein 
                 <span>Foto</span>
-                <img src="/assets/foto.jpg" alt="">
+                <img src="/assets/foto.jpg" alt="" class="tag-image">
                 von ihnen schießen. Nach einigen erfolgreichen Fotografien entbrannte eine entspannte Diskussion mit dem Späti-Besitzer über die aufkommende Späti-Kultur und wie diese sich zwischen Marburg und Mainz unterscheidet. 
             </p>
             <p>
                 Wir verabschiedeten uns und zogen zum zweiten Späti weiter. Mittlerweile hatte es stärker angefangen zu regnen. Glücklicherweise lag der nächste Spät in einer überdachten 
                 <span>Passage</span>
-                <img src="/assets/Passage.jpg" alt="">
+                <img src="/assets/Passage.jpg" alt="" class="tag-image">
                 , sodass wir trocken blieben. 
                 Der Späti war kleiner und 
                 <span>behaglicher</span>
-                <img src="/assets/behaglicher.jpg" alt="">
+                <img src="/assets/behaglicher.jpg" alt="" class="tag-image">
                 , was das Fotografieren mit Stativ etwas erschwerte. Aber auch diese Herausforderung konnte gemeistert werden. 
             </p>
             <p>
                 Die ersten beiden Spätis hatten wir erfolgreich dokumentiert und wir bekamen langsam Hunger. Dazu zogen wir weiter zum 
                 <span>Aula-Platz</span>
-                <img src="/assets/aula-platz.jpg" alt="">
+                <img src="/assets/aula-platz.jpg" alt="" class="tag-image">
                 , dem dritten Späti. Dort trafen wir auf weitere Freunde. Wir aßen, 
                 <span>spielten</span>
-                <img src="/assets/spielten.jpg" alt=""> 
+                <img src="/assets/spielten.jpg" alt="" class="tag-image"> 
                 Karten und führten auch dort ein entspanntes Gespräch mit dem 
                 <span>Späti-Besitzer</span>
-                <img src="/assets/spaeti-besitzer.jpg" alt="">
+                <img src="/assets/spaeti-besitzer.jpg" alt="" class="tag-image">
                 . 
             </p>
             <p>
@@ -77,13 +77,13 @@
             <p>
                 Beim letzten Späti für den Abend, fanden wir eine riesige Menschenversammlung vor. Kurz hatte ich Sorge, dass es deswegen nicht möglich sein würde dort Fotos zu schießen. Allerdings wurde das Projekt gut angenommen und ich konnte den Späti, 
                 <span>Angestellte</span> 
-                <img src="/assets/angestellte.jpg" alt="">
+                <img src="/assets/angestellte.jpg" alt="" class="tag-image">
                 und die ausgelassene 
                 <span>Gruppe</span> 
-                <img src="/assets/gruppe.jpg" alt="">
+                <img src="/assets/gruppe.jpg" alt="" class="tag-image">
                 fotografieren. Für einen kurzen Moment wurde ich Geburtstagfotograf und durfte das 
                 <span>Geburtstagskind</span> 
-                <img src="/assets/geburtstagkind.jpg" alt="">
+                <img src="/assets/geburtstagkind.jpg" alt="" class="tag-image">
                 fotografieren. 
             </p>
             <p>
