--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="./scripts/app.js" defer></script>
 </head>
 <body>
+    <div id="mouseover"></div>
     <header>
         <div class="content-wrap">
             <p id="documentary">Eine fotografische Dokumentation</p>
