Adds routes to the images on the span elements

--- a/index.html
+++ b/index.html
@@ -41,40 +41,40 @@
             <p>
                 Es war ein milder Oktoberabend in Marburg. Es regnete leicht.
                 Ich war mit Freunden an einem Späti verabredet, von dem wir unsere Späti-Tour starten wollten. Nachdem wir uns dort 
-                <span class="show-image">versammelt</span>
+                <span class="show-image" data-image="/assets/versammelt.jpg">versammelt</span>
                  hatten und das erste Bier getrunken war, begann ich zu fotografieren. Glücklicherweise standen alle Späti-Besitzer dem Projekt sehr offen gegenüber, sodass ich in jedem Späti Fotos schießen konnte.
             </p>
             <p>
                 Kamera und Stativ zogen natürlich Aufmerksamkeit auf sich, was allerdings zu coolen Gesprächen führte. Eine Gruppe im Späti zeigte Interesse an dem Projekt und nach einem kurzen Gespräch durfte ich auch ein 
-                <span class="show-image">Foto</span>
+                <span class="show-image" data-image="/assets/foto.jpg">Foto</span>
                 von ihnen schießen. Nach einigen erfolgreichen Fotografien entbrannte eine entspannte Diskussion mit dem Späti-Besitzer über die aufkommende Späti-Kultur und wie diese sich zwischen Marburg und Mainz unterscheidet. 
             </p>
             <p>
                 Wir verabschiedeten uns und zogen zum zweiten Späti weiter. Mittlerweile hatte es stärker angefangen zu regnen. Glücklicherweise lag der nächste Spät in einer überdachten 
-                <span class="show-image" data-image="./assets/Passage.jpg">Passage</span>
+                <span class="show-image" data-image="/assets/Passage.jpg">Passage</span>
                 , sodass wir trocken blieben. 
                 Der Späti war kleiner und 
-                <span class="show-image">behaglicher</span>
+                <span class="show-image" data-image="/assets/behaglicher.jpg">behaglicher</span>
                 , was das Fotografieren mit Stativ etwas erschwerte. Aber auch diese Herausforderung konnte gemeistert werden. 
             </p>
             <p>
                 Die ersten beiden Spätis hatten wir erfolgreich dokumentiert und wir bekamen langsam Hunger. Dazu zogen wir weiter zum 
-                <span class="show-image">Aula-Platz</span>
+                <span class="show-image" data-image="/assets/aula-platz.jpg">Aula-Platz</span>
                 , dem dritten Späti. Dort trafen wir auf weitere Freunde. Wir aßen, 
-                <span class="show-image">spielten</span>
+                <span class="show-image" data-image="/assets/spielten.jpg">spielten</span>
                 Karten und führten auch dort ein entspanntes Gespräch mit dem 
-                <span class="show-image">Späti-Besitzer</span>. 
+                <span class="show-image" data-image="/assets/spaeti-besitzer.jpg">Späti-Besitzer</span>. 
             </p>
             <p>
                 Es war spät geworden und es regnete immer stärker. Viele meiner Freunde verabschiedeten sich und gingen nach Hause. Für mich und einen weiteren Kumpel ging es jedoch weiter.
             </p>
             <p>
                 Beim letzten Späti für den Abend, fanden wir eine riesige Menschenversammlung vor. Kurz hatte ich Sorge, dass es deswegen nicht möglich sein würde dort Fotos zu schießen. Allerdings wurde das Projekt gut angenommen und ich konnte den Späti, 
-                <span class="show-image">Angestellte</span> 
+                <span class="show-image" data-image="/assets/angestellte.jpg">Angestellte</span> 
                 und die ausgelassene 
-                <span class="show-image">Gruppe</span> 
+                <span class="show-image" data-image="/assets/gruppe.jpg">Gruppe</span> 
                 fotografieren. Für einen kurzen Moment wurde ich Geburtstagfotograf und durfte das 
-                <span class="show-image">Geburtstagskind</span> 
+                <span class="show-image" data-image="/assets/geburtstagkind.jpg">Geburtstagskind</span> 
                 fotografieren. 
             </p>
             <p>
