Makes 'Nach unten scrollen' clickable

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
             <div class="headline-fit">
                 <h1 id="main-headline">Kiosk Kultur</h1>
             </div>
-            <p id="scroll-down">Nach unten scrollen</p>
+            <a href="#content" id="scroll-down">Nach unten scrollen</a>
         </div>
     </header>
 
     <main>
         <div id="gradient"></div>
-        <div class="content-wrap">
+        <div class="content-wrap" id="content">
             <p>
                 Es war ein milder Oktoberabend in Marburg. Es regnete leicht.
                 Ich war mit Freunden an einem Späti verabredet, von dem wir unsere Späti-Tour starten wollten. Nachdem wir uns dort 
