--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     </header>
 
     <main>
+        <div class="preload-images"></div>
         <div id="gradient"></div>
         <div class="content-wrap" id="content">
             <p>
