Adds smooth scrolling library

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     <link rel="stylesheet" href="https://use.typekit.net/uyi5wib.css">
 
     <!-- Normalize the ccs  -->
-    <link rel="text/html" href="https://unpkg.com/browse/normalize.css@8.0.1/">
+    <link rel="stylesheet" href="https://unpkg.com/browse/normalize.css@8.0.1/">
+
+    <!-- Smooth Scroll -->
+    <link rel="stylesheet" href="stylesheets/smooth-scroll/locomotive-scroll.min.css">
+    <script src="scripts/smooth-scroll/locomotive-scroll.min.js"></script>
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./stylesheets/style.css">
