Enables smooth scrolling

--- a/index.html
+++ b/index.html
@@ -22,73 +22,75 @@
     <script src="./scripts/app.js" defer></script>
 </head>
 <body>
-    <div class="mouseover"></div>
-    <header>
-        <div class="content-wrap">
-            <p id="documentary">Eine fotografische Dokumentation</p>
-            <p id="date">
-                <svg>
-                    <line x1="0" y1="0" x2="100" y2="0"></line>
-                </svg>
-                Oktober 2019
-            </p>
-            <div class="headline-fit">
-                <h1 id="main-headline">Kiosk Kultur</h1>
+    <div id="smooth-scroll" data-scroll-container>
+        <div class="mouseover"></div>
+        <header>
+            <div class="content-wrap">
+                <p id="documentary">Eine fotografische Dokumentation</p>
+                <p id="date">
+                    <svg>
+                        <line x1="0" y1="0" x2="100" y2="0"></line>
+                    </svg>
+                    Oktober 2019
+                </p>
+                <div class="headline-fit">
+                    <h1 id="main-headline">Kiosk Kultur</h1>
+                </div>
+                <a href="#content" id="scroll-down">Nach unten scrollen</a>
             </div>
-            <a href="#content" id="scroll-down">Nach unten scrollen</a>
-        </div>
-    </header>
+        </header>
 
-    <main>
-        <div class="preload-images"></div>
-        
-        <div id="gradient"></div>
-        <div class="content-wrap" id="content">
-            <p>
-                Es war ein milder Oktoberabend in Marburg. Es regnete leicht.
-                Ich war mit Freunden an einem Späti verabredet, von dem wir unsere Späti-Tour starten wollten. Nachdem wir uns dort 
-                <span class="show-image" data-image="/assets/versammelt.jpg">versammelt</span>
-                 hatten und das erste Bier getrunken war, begann ich zu fotografieren. Glücklicherweise standen alle Späti-Besitzer dem Projekt sehr offen gegenüber, sodass ich in jedem Späti Fotos schießen konnte.
-            </p>
-            <p>
-                Kamera und Stativ zogen natürlich Aufmerksamkeit auf sich, was allerdings zu coolen Gesprächen führte. Eine Gruppe im Späti zeigte Interesse an dem Projekt und nach einem kurzen Gespräch durfte ich auch ein 
-                <span class="show-image" data-image="/assets/foto.jpg">Foto</span>
-                von ihnen schießen. Nach einigen erfolgreichen Fotografien entbrannte eine entspannte Diskussion mit dem Späti-Besitzer über die aufkommende Späti-Kultur und wie diese sich zwischen Marburg und Mainz unterscheidet. 
-            </p>
-            <p>
-                Wir verabschiedeten uns und zogen zum zweiten Späti weiter. Mittlerweile hatte es stärker angefangen zu regnen. Glücklicherweise lag der nächste Spät in einer überdachten 
-                <span class="show-image" data-image="/assets/Passage.jpg">Passage</span>
-                , sodass wir trocken blieben. 
-                Der Späti war kleiner und 
-                <span class="show-image" data-image="/assets/behaglicher.jpg">behaglicher</span>
-                , was das Fotografieren mit Stativ etwas erschwerte. Aber auch diese Herausforderung konnte gemeistert werden. 
-            </p>
-            <p>
-                Die ersten beiden Spätis hatten wir erfolgreich dokumentiert und wir bekamen langsam Hunger. Dazu zogen wir weiter zum 
-                <span class="show-image" data-image="/assets/aula-platz.jpg">Aula-Platz</span>
-                , dem dritten Späti. Dort trafen wir auf weitere Freunde. Wir aßen, 
-                <span class="show-image" data-image="/assets/spielten.jpg">spielten</span>
-                Karten und führten auch dort ein entspanntes Gespräch mit dem 
-                <span class="show-image" data-image="/assets/spaeti-besitzer.jpg">Späti-Besitzer</span>. 
-            </p>
-            <p>
-                Es war spät geworden und es regnete immer stärker. Viele meiner Freunde verabschiedeten sich und gingen nach Hause. Für mich und einen weiteren Kumpel ging es jedoch weiter.
-            </p>
-            <p>
-                Beim letzten Späti für den Abend, fanden wir eine riesige Menschenversammlung vor. Kurz hatte ich Sorge, dass es deswegen nicht möglich sein würde dort Fotos zu schießen. Allerdings wurde das Projekt gut angenommen und ich konnte den Späti, 
-                <span class="show-image" data-image="/assets/angestellte.jpg">Angestellte</span> 
-                und die ausgelassene 
-                <span class="show-image" data-image="/assets/gruppe.jpg">Gruppe</span> 
-                fotografieren. Für einen kurzen Moment wurde ich Geburtstagfotograf und durfte das 
-                <span class="show-image" data-image="/assets/geburtstagkind.jpg">Geburtstagskind</span> 
-                fotografieren. 
-            </p>
-            <p>
-                Nach einem weiteren Bier und ausgelassenen Gesprächen, wurde es immer später. Mein Kumpel und ich beschlossen hier die erfolgreiche Tour zu beenden. Wir verabschiedeten uns und gingen nach Hause.
-            </p>
-        </div>
-    </main>
+        <main>
+            <div class="preload-images"></div>
+            
+            <div id="gradient"></div>
+            <div class="content-wrap" id="content">
+                <p>
+                    Es war ein milder Oktoberabend in Marburg. Es regnete leicht.
+                    Ich war mit Freunden an einem Späti verabredet, von dem wir unsere Späti-Tour starten wollten. Nachdem wir uns dort 
+                    <span class="show-image" data-image="/assets/versammelt.jpg">versammelt</span>
+                    hatten und das erste Bier getrunken war, begann ich zu fotografieren. Glücklicherweise standen alle Späti-Besitzer dem Projekt sehr offen gegenüber, sodass ich in jedem Späti Fotos schießen konnte.
+                </p>
+                <p>
+                    Kamera und Stativ zogen natürlich Aufmerksamkeit auf sich, was allerdings zu coolen Gesprächen führte. Eine Gruppe im Späti zeigte Interesse an dem Projekt und nach einem kurzen Gespräch durfte ich auch ein 
+                    <span class="show-image" data-image="/assets/foto.jpg">Foto</span>
+                    von ihnen schießen. Nach einigen erfolgreichen Fotografien entbrannte eine entspannte Diskussion mit dem Späti-Besitzer über die aufkommende Späti-Kultur und wie diese sich zwischen Marburg und Mainz unterscheidet. 
+                </p>
+                <p>
+                    Wir verabschiedeten uns und zogen zum zweiten Späti weiter. Mittlerweile hatte es stärker angefangen zu regnen. Glücklicherweise lag der nächste Spät in einer überdachten 
+                    <span class="show-image" data-image="/assets/Passage.jpg">Passage</span>
+                    , sodass wir trocken blieben. 
+                    Der Späti war kleiner und 
+                    <span class="show-image" data-image="/assets/behaglicher.jpg">behaglicher</span>
+                    , was das Fotografieren mit Stativ etwas erschwerte. Aber auch diese Herausforderung konnte gemeistert werden. 
+                </p>
+                <p>
+                    Die ersten beiden Spätis hatten wir erfolgreich dokumentiert und wir bekamen langsam Hunger. Dazu zogen wir weiter zum 
+                    <span class="show-image" data-image="/assets/aula-platz.jpg">Aula-Platz</span>
+                    , dem dritten Späti. Dort trafen wir auf weitere Freunde. Wir aßen, 
+                    <span class="show-image" data-image="/assets/spielten.jpg">spielten</span>
+                    Karten und führten auch dort ein entspanntes Gespräch mit dem 
+                    <span class="show-image" data-image="/assets/spaeti-besitzer.jpg">Späti-Besitzer</span>. 
+                </p>
+                <p>
+                    Es war spät geworden und es regnete immer stärker. Viele meiner Freunde verabschiedeten sich und gingen nach Hause. Für mich und einen weiteren Kumpel ging es jedoch weiter.
+                </p>
+                <p>
+                    Beim letzten Späti für den Abend, fanden wir eine riesige Menschenversammlung vor. Kurz hatte ich Sorge, dass es deswegen nicht möglich sein würde dort Fotos zu schießen. Allerdings wurde das Projekt gut angenommen und ich konnte den Späti, 
+                    <span class="show-image" data-image="/assets/angestellte.jpg">Angestellte</span> 
+                    und die ausgelassene 
+                    <span class="show-image" data-image="/assets/gruppe.jpg">Gruppe</span> 
+                    fotografieren. Für einen kurzen Moment wurde ich Geburtstagfotograf und durfte das 
+                    <span class="show-image" data-image="/assets/geburtstagkind.jpg">Geburtstagskind</span> 
+                    fotografieren. 
+                </p>
+                <p>
+                    Nach einem weiteren Bier und ausgelassenen Gesprächen, wurde es immer später. Mein Kumpel und ich beschlossen hier die erfolgreiche Tour zu beenden. Wir verabschiedeten uns und gingen nach Hause.
+                </p>
+            </div>
+        </main>
 
-    <div class="bottom-gradient"></div> 
+        <div class="bottom-gradient"></div> 
+    </div>
 </body>
 </html>
