--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kiosk Kultur</title>
 
+    <!-- Adds favicon -->
+    <link rel="shortcut icon" href="./assets/favicon.png" />
+
     <!-- Link to the font  -->
     <link rel="stylesheet" href="https://use.typekit.net/uyi5wib.css">
 
