Adds arrow before scroll down

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Kiosk Kultur</title>
 
     <!-- Adds favicon -->
-    <link rel="shortcut icon" href="./assets/favicon.png" />
+    <link rel="shortcut icon" href="./assets/favicon.png">
 
     <!-- Link to the font  -->
     <link rel="stylesheet" href="https://use.typekit.net/uyi5wib.css">
@@ -34,7 +34,12 @@
             <div class="headline-fit">
                 <h1 id="main-headline">Kiosk Kultur</h1>
             </div>
-            <a href="#content" id="scroll-down">Nach unten scrollen</a>
+            <a id="scroll-down">
+                <svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24.54 32.5">
+                    <polygon points="22.34 17.26 13.77 26.48 13.77 0 10.77 0 10.77 26.48 2.2 17.26 0 19.31 12.27 32.5 24.54 19.31 22.34 17.26" style="fill:#fff"/>
+                </svg>
+                Nach unten scrollen
+            </a>
         </div>
     </header>
 
