--- a/index.html
+++ b/index.html
@@ -93,6 +93,17 @@
         </div>
     </main>
 
+    <footer>
+        <div class="content-wrap">
+            <p>
+                © Francesco Scheffczyk
+            </p>
+            <p>
+                Kommunikationsdesign, Hochschule Mainz, WiSe 19/20
+            </p>
+        </div>
+    </footer>
+
     <div class="bottom-gradient"></div> 
 </body>
 </html>
