--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kiosk Kultur</title>
+    <title>Kiosk Kultur – Experimentelles Layout</title>
 
     <!-- Adds favicon -->
     <link rel="shortcut icon" href="./assets/favicon.png">
