BugFix: Sets better outline for main headline

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 Oktober 2019
             </p>
             <div class="headline-fit">
-                <h1 id="main-headline">Kiosk Kultur</h1>
+                <div id="main-headline">Kiosk Kultur</div>
             </div>
             <a id="scroll-down">
                 <svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24.54 32.5">
